Fixed scrolling issues on mobile and flashing messages on page load

--- a/app/static/styles/main.scss
+++ b/app/static/styles/main.scss
@@ -77,7 +77,7 @@
     grid-auto-flow: column;
 
     #sidebar {
-      padding: 20px 60px;
+      padding: 20px 140px;
 
       h1 {
         margin-top: 0;
@@ -89,8 +89,7 @@
     }
   }
 
-  &include phone {
-    grid-template-areas: "sidebar" "content";
+  @include phone {
     grid-template-columns: 100vw;
     grid-template-rows: 100vh;
     grid-auto-flow: column;
@@ -98,9 +97,22 @@
     #sidebar {
       h1 {
         margin-top: 0;
+        font-size: 60px
+      }
+
+      h3 {
+        font-size: 18px;
+      }
+
+      form {
+        padding-top: 25px;
       }
 
       padding: 20px 30px;
+    }
+
+    #content {
+      display: none;
     }
   }
 }
